--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,6 @@
 name: 'build-test'
-on: # rebuild any PRs and main branch changes
+on:
   pull_request:
-  push:
-    branches:
-      - main
-      - 'releases/*'
 
 jobs:
   build: # make sure build/ci work properly
@@ -15,10 +11,31 @@ jobs:
           npm install
       - run: |
           npm run all
-  test: # make sure the action works on a clean machine without building
+  pr-coverage: # create pr coverage report
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - run: npm install
+      - run: npm run coverage
+
+      - name: Save code coverage report
+        uses: actions/upload-artifact@v2
+        with:
+          name: ref-lcov.info
+          path: ./coverage/lcov.info
+
+
+  test: # make sure the action works on a clean machine without building
+    runs-on: ubuntu-latest
+    needs: pr-coverage
+    steps:
+      - uses: actions/checkout@v2
+      - name: Download code coverage report
+        uses: actions/download-artifact@v2
+        with:
+          name: ref-lcov.info
       - uses: ./
         with:
-          milliseconds: 1000
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          min_threshold: '100'
+          report_file_path: './lcov.info'
