--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,17 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'Test coverage check'
+description: 'Check coverage and annotate uncovered code in PR'
+author: 'inzephirum'
 inputs:
-  milliseconds: # change this
+  github_token:
     required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+    description: 'Github token'
+  report_file_path:
+    required: true
+    description: 'Path to lcov file'
+  min_threshold:
+    description: 'Min percentage of coverage'
+    default: '100'
+
 runs:
   using: 'node12'
   main: 'dist/index.js'
